--- a/DANA4840_Hierarchical_Clustering_Cars.Rmd
+++ b/DANA4840_Hierarchical_Clustering_Cars.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "DANA4840 Project - Hierarchical Clustering"
-author: "M.Gadimova, A.Mukherjee, R.Shrestha, P.Tating"
+title: "DANA 4840 Project - Hierarchical Clustering"
+author: "Aryan, Maryam, Patricia, Roman"
 output: html_document
 ---
 
@@ -38,7 +38,7 @@ head(mtcars)
 dim(mtcars)
 str(mtcars)
 ```
-We can see that our data comprises 32 observations of different car models and 12 automobile features of mixed data types.
+We can see that our data comprises 32 observations of different car models and 12 automobile features of mixed (numeric, integer, character) data types.
 
 
 ## 2.2 Feature Explanation
@@ -84,7 +84,7 @@ rownames(mtcars_joined) <- mtcars$model
 mtcars <- mtcars_joined
 head(mtcars)
 ```
-Our numerical features have different scale of measurements so we standardized the data to ensure each variable contributes equally to the distance calculations, preventing variables with larger scales to have more weight in the clustering results.
+Our numerical features have different scale of measurements, so we standardized the data to ensure each variable contributes equally to the distance calculations, preventing variables with larger scales to have more weight in the clustering results. We also do not standardize the categorical data.
 
 
 ## 2.4 Exploratory Data Analysis
@@ -94,6 +94,7 @@ Our numerical features have different scale of measurements so we standardized t
 missing_mtcars <- sapply(mtcars, function(x) sum(is.na(x)))
 missing_mtcars
 ```
+From this we can see that our data does not have the presence of any missing values.
 
 
 ### 2.4.2. Boxplots for Different Features
@@ -106,36 +107,40 @@ The graph presents standardized boxplots for several numerical variables, facili
 
 Notably, the variables 'qsec', 'hp', and 'wt' have outliers on the positive side, indicating some data points that are significantly higher than the majority of the data for these variables.
 
+Besides this we can also see that the distribution of most of the numeric data are skewed either to the right or left with 'qsec', 'hp', and 'disp' being skewed to the right, 'wt' and 'drat' to the left, and 'mpg' appearing to be symmetric.
+
 
 ### 2.4.3. Bar Plot for Categorical Variables
 ```{r}
+set.seed(42)
+
 plot_cyl <- ggplot(mtcars_categorical, aes(x = factor(cyl), fill = factor(cyl))) +
   geom_bar() +
-  scale_fill_manual(values = color_palette) +
+  scale_fill_manual(values = sample(color_palette, 6)) +
   theme_classic() +
   ggtitle("Cylinders")
 
 plot_vs <- ggplot(mtcars_categorical, aes(x = factor(vs), fill = factor(vs))) +
   geom_bar() +
-  scale_fill_manual(values = color_palette) +
+  scale_fill_manual(values = sample(color_palette, 6)) +
   theme_classic() +
   ggtitle("Engine Shape (vs)")
 
 plot_am <- ggplot(mtcars_categorical, aes(x = factor(am), fill = factor(am))) +
   geom_bar() +
-  scale_fill_manual(values = color_palette) +
+  scale_fill_manual(values = sample(color_palette, 6)) +
   theme_classic() +
   ggtitle("Transmission (am)")
 
 plot_gear <- ggplot(mtcars_categorical, aes(x = factor(gear), fill = factor(gear))) +
   geom_bar() +
-  scale_fill_manual(values = color_palette) +
+  scale_fill_manual(values = sample(color_palette, 6)) +
   theme_classic() +
   ggtitle("Gears")
 
 plot_carb <- ggplot(mtcars_categorical, aes(x = factor(carb), fill = factor(carb))) +
   geom_bar() +
-  scale_fill_manual(values = color_palette) +
+  scale_fill_manual(values = sample(color_palette, 6)) +
   theme_classic() +
   ggtitle("Carburetors")
 
@@ -171,7 +176,7 @@ fviz_dist(
   gradient = list(low = "green", mid = "white", high = "grey")
 ) + labs(title = "mtcar")
 ```
-The Hopkins statistic of 0.9999998 indicates a strong clustering tendency in the dataset, suggesting that the data is well-suited for cluster analysis. The VAT plot visually reinforces this, showing distinct blocks of similar values along the diagonal, which corresponds to well-separated clusters.
+The Hopkins statistic of 0.9999998 indicates a strong clustering tendency in the dataset, suggesting that the data is well-suited for cluster analysis. The VAT plot visually reinforces this, showing two distinct blocks of similar values along the diagonal, which corresponds to well-separated clusters.
 
 
 ## 3.2. Finding the Optimal Number of Clusters
@@ -188,9 +193,43 @@ mtcars_silhouette_hierarchical
 mtcars_gap_hierarchical <- fviz_nbclust(mtcars, hcut, nstart = 50, method = "gap_stat", nboot = 500)
 mtcars_gap_hierarchical
 ```
-The Gap Statistic graph indicates that the optimal number of clusters is k=2. This conclusion is drawn from observing the most significant change in the Gap Statistic value at this point.
 
-TODO: positive negative graph
+
+### 3.2.2. Gap Statistics (Positive/Negative Graph)
+```{r}
+get_cluster_diff <- function(gap_stat, max_k = 10) {
+  gap_df <- as.data.frame(gap_stat$Tab)
+
+  gap_diff_list <- vector()
+  gap_val_list <- gap_df$gap
+  s_val_list <- gap_df$SE.sim
+
+  for (k in 1:max_k) {
+    if (k < max_k - 1) {
+      val <- gap_val_list[k] -
+        (gap_val_list[k + 1] -
+          s_val_list[k + 1])
+
+      gap_diff_list <- append(gap_diff_list, val)
+    }
+  }
+
+  return(gap_diff_list)
+}
+
+max_k <- 10
+gap_stat <- clusGap(mtcars, hcut, K.max = max_k, B = 500)
+gap_diff_list <- get_cluster_diff(gap_stat, 10)
+pos_neg_df <- data.frame(cluster = factor(seq_along(gap_diff_list)), gap_diff = gap_diff_list)
+
+ggplot(data = pos_neg_df, aes(x = cluster, y = gap_diff)) +
+  geom_bar(stat = "identity", fill = "blue") +
+  xlab("Number of clusters K") +
+  ylab("Gap(k) - (Gap(k+1) - Sk+1)") +
+  ggtitle("Gap Statistic for Hierarchical Clustering") +
+  theme_classic()
+```
+Both the Silhouette Width graph and the Gap Statistic graph indicates that the optimal number of clusters is k=2. In case of our silhouette width graph it is the point where the value of the average silhouette width is the highest and similarly for the gap statistic graph this conclusion is drawn from observing the most significant change in the gap statistic value at this point.
 
 
 # 4. Clustering Analysis
@@ -369,7 +408,7 @@ single_dendrogram +
   ward_d2_dendrogram +
   plot_layout(ncol = 2)
 ```
-
+TODO: interpretation
 
 ### 4.2.2 Comparing Clusters
 ```{r}
@@ -380,7 +419,7 @@ single_cluster +
   ward_d2_cluster +
   plot_layout(ncol = 2)
 ```
-
+TODO: interpretation
 
 ### 4.2.3 Correlation between cophenetic distance and the original distance
 ```{r}
@@ -399,6 +438,8 @@ The high correlation coefficient of 0.8011 demonstrates that the average-linkage
 The high correlation coefficient of 0.7494 demonstrates that Ward's hierarchical clustering method maintains a strong consistency with the original distance relationships between data points.
 
 The high correlation coefficient of 0.7667039 demonstrates that Ward's hierarchical clustering method maintains a strong consistency with the original distance relationships between data points.
+
+TODO: interpretation
 
 
 ### 4.2.4 Correlation Matrix
@@ -434,10 +475,30 @@ dend_list <- dendlist(
   "WardD2" = dend_ward2
 )
 
-cors <- cor.dendlist(dend_list)
+cors_cophenetic <- cor.dendlist(dend_list, method = "cophenetic")
 
-round(cors, 2)
+round(cors_cophenetic, 2)
 ```
+The cophenetic correlation measures how similarly the clustering patterns are preserved in terms of pairwise distances. In other words, this correlation indicates how well the hierarchical clustering preserves the pairwise distances between observations.
+
+- *High Correlation (close to 1):* Single and Average (0.92), WardD and WardD2 (0.99), Single and Centroid (0.91). Indicates these methods produce similar clustering patterns.
+- *Moderate Correlation:* Complete and Single (0.84), Complete and Average (0.79), Average and WardD (0.80).
+- *Low Correlation:* Complete and WardD (0.59), Centroid and WardD (0.53). Indicates different clustering patterns.
+
+TODO: interpretation
+
+
+```{r}
+cors_baker <- cor.dendlist(dend_list, method = "baker")
+
+round(cors_baker, 2)
+```
+The Baker correlation measures the similarity in the structure of the dendrograms. In other words, this correlation indicates the similarity in the overall structure of the dendrograms.
+
+- *High Correlation:* WardD and WardD2 (0.98), Average and WardD (0.85), Average and WardD2 (0.90). Indicates similar dendrogram structures.
+- *Moderate Correlation:* Complete and Single (0.85), Single and Average (0.76).
+- *Low Correlation:* Complete and Centroid (0.11), Single and Centroid (0.07), Centroid with most others. Indicates different dendrogram structures.
+TODO: interpretation
 
 ```{r}
 corrplot(cors, method = "pie", type = "lower", col = color_palette, tl.col = "black")
@@ -445,35 +506,75 @@ corrplot(cors, method = "pie", type = "lower", col = color_palette, tl.col = "bl
 * The Single and Average methods, as well as the two Ward methods (WardD and WardD2), exhibit very high correlations, indicating that these methods produce very similar clustering results.
 * The Complete and Centroid methods show lower correlations with other methods, particularly with WardD, reflecting more distinct clustering structures compared to the others.
 
+- *Strong Positive Correlations:*
+- WardD and WardD2 are very similar to each other, indicating that the results from these methods are almost identical.
+
+- *Moderate Positive Correlations:*
+- Single Linkage and Average Linkage are more similar to each other compared to their similarity with WardD and WardD2.
+
+- *Weak or No Correlation:*
+- Complete Linkage has moderate similarity with Single Linkage and Average Linkage, but is less similar to WardD and WardD2.
+
+- *Negative Correlations:*
+- There are no cells shaded in red, indicating no negative correlations between the linkage methods.
+TODO: interpretation
+
+### 4.2.5 Finding best Linkage Method
+```{r}
+linkage_methods <- c("Single", "Complete", "Average", "Ward.D", "Ward.D2")
+
+cophenetic_correlations <- c(
+  cor(res.dist, cophenetic(hc_single)),
+  cor(res.dist, cophenetic(hc_complete)),
+  cor(res.dist, cophenetic(hc_average)),
+  cor(res.dist, cophenetic(hc_ward_d)),
+  cor(res.dist, cophenetic(hc_ward_d2))
+)
+
+cophenetic_df <- data.frame(
+  linkage_method = linkage_methods,
+  cophenetic_correlation = cophenetic_correlations
+)
+
+cophenetic_df
+```
+
+```{r}
+ggplot(cophenetic_df, aes(x = linkage_method, y = cophenetic_correlation)) +
+  geom_bar(stat = "identity", fill = "#2E9FDF") +
+  theme_minimal() +
+  labs(
+    title = "Cophenetic Correlation Coefficients for Different Linkage Methods",
+    x = "Linkage Method",
+    y = "Cophenetic Correlation Coefficient"
+  ) +
+  geom_text(aes(label = round(cophenetic_correlation, 3)))
+```
+In this case, the Average linkage method has the highest cophenetic correlation coefficient (0.8010725), followed closely by the Complete linkage method (0.7858564). These methods are the best fit for our data based on the cophenetic correlation coefficient.
+TODO: interpretation
+
+
+### 4.2.6 Tanglegram of the Average Linkage Method
+```{r}
+average_dendrogram <- as.dendrogram(hc_average)
+complete_dendrogram <- as.dendrogram(hc_complete)
+
+tanglegram(
+  average_dendrogram,
+  complete_dendrogram,
+  color_lines = color_palette,
+  highlight_distinct_edges = FALSE, # Turn-off dashed lines
+  common_subtrees_color_lines = FALSE, # Turn-off line colors
+  common_subtrees_color_branches = TRUE, # Color common branches
+  main = paste("Tanglegram: Average vs. Complete Linkage, Entanglement =", round(entanglement(dendlist(average_dendrogram, complete_dendrogram)), 2))
+)
+```
+TODO: interpretation
+
 
 ## 4.3 Alternative Hierarchical Clustering Methods
 
-### 4.3.1. Agglomerative Nesting
-```{r}
-res.agnes <- agnes(
-  x = mtcars,
-  metric = "manhattan",
-  method = "ward"
-)
-
-nesting_dendrogram <- fviz_dend(
-  res.agnes,
-  cex = 0.5,
-  k = 2,
-  k_colors = "jco",
-  rect = TRUE,
-  rect_border = "jco",
-  rect_fill = TRUE,
-  label_cols = "black",
-  label_cex = 0.5,
-  main = "Hierarchical Nested Clustering Dendrogram",
-  ggtheme = theme_minimal()
-)
-nesting_dendrogram
-```
-
-
-### 4.3.2. Divisive Analysis Clustering
+### 4.3.1. Divisive Analysis Clustering
 ```{r}
 res.diana <- diana(
   x = mtcars,
@@ -497,28 +598,14 @@ divisive_dendrogram
 ```
 
 
-### 4.3.3.Comparing Alternative Hierarchical Clustering Methods
-```{r}
-nesting_dendrogram +
-  divisive_dendrogram +
-  plot_layout(ncol = 2)
-```
-
-
 # 5. Cluster Validation
 
 ## 5.1 Internal Validation
+
+### 5.1.1 Average Linkage Method
 ```{r}
-intern_mtcars <- clValid(mtcars, 2:6, clMethods = c("hierarchical", "kmeans", "pam"), validation = "internal")
+intern_mtcars <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "internal", method = "average", metric = "manhattan")
 
-summary(intern_mtcars)
-```
-* The hierarchical clustering method with 2 clusters achieves the lowest connectivity score, indicating that it produces the most compact clusters among the methods and configurations tested.
-* The hierarchical clustering method with 6 clusters achieves the highest Dunn Index score, suggesting that this configuration provides the best separation between clusters relative to their size.
-* The PAM method with 2 clusters achieves the highest silhouette width, indicating that this configuration results in the most well-defined and cohesive clusters.
-
-
-```{r}
 par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
 
 plot(intern_mtcars, legend = FALSE)
@@ -526,14 +613,62 @@ plot(intern_mtcars, legend = FALSE)
 plot(nClusters(intern_mtcars), measures(intern_mtcars, "Dunn")[, , 1], type = "n", axes = FALSE, xlab = "", ylab = "")
 legend("center", clusterMethods(intern_mtcars), col = 1:9, lty = 1:9, pch = paste(1:9))
 ```
-* Connectivity: The hierarchical method gives the lowest connectivity score at k=2, as well as having consistently lowest scores.
-* K-means: The hierarchical method gives the highest value for Dunn Index at k=6, and is also consistently highest as well.
-* Silhouette: PAM and k-means seem to have tied for highest silhouette score at k=2, but k-means overall has higher scores consistently.
+
+
+```{r}
+intern_complete <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "internal", method = "complete", metric = "manhattan")
+intern_average <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "internal", method = "average", metric = "manhattan")
+intern_single <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "internal", method = "single", metric = "manhattan")
+intern_ward <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "internal", method = "ward", metric = "manhattan")
+
+num_clusters <- nClusters(intern_complete)
+
+dunn_complete <- measures(intern_complete, "Dunn")[, , 1]
+dunn_average <- measures(intern_average, "Dunn")[, , 1]
+dunn_single <- measures(intern_single, "Dunn")[, , 1]
+dunn_ward <- measures(intern_ward, "Dunn")[, , 1]
+
+connectivity_complete <- measures(intern_complete, "Connectivity")[, , 1]
+connectivity_average <- measures(intern_average, "Connectivity")[, , 1]
+connectivity_single <- measures(intern_single, "Connectivity")[, , 1]
+connectivity_ward <- measures(intern_ward, "Connectivity")[, , 1]
+
+silhouette_complete <- measures(intern_complete, "Silhouette")[, , 1]
+silhouette_average <- measures(intern_average, "Silhouette")[, , 1]
+silhouette_single <- measures(intern_single, "Silhouette")[, , 1]
+silhouette_ward <- measures(intern_ward, "Silhouette")[, , 1]
+
+# Plot Dunn index
+par(mfrow = c(3, 1), mar = c(4, 4, 3, 1))
+plot(num_clusters, dunn_complete, type = "o", col = "red", ylim = range(dunn_complete, dunn_average, dunn_single, dunn_ward),
+     xlab = "Number of Clusters", ylab = "Dunn Index", main = "Dunn Index")
+lines(num_clusters, dunn_average, type = "o", col = "blue")
+lines(num_clusters, dunn_single, type = "o", col = "green")
+lines(num_clusters, dunn_ward, type = "o", col = "purple")
+legend("bottomright", legend = c("Complete", "Average", "Single", "Ward"), col = c("red", "blue", "green", "purple"), lty = 1, pch = 1)
+
+# Plot Connectivity
+plot(num_clusters, connectivity_complete, type = "o", col = "red", ylim = range(connectivity_complete, connectivity_average, connectivity_single, connectivity_ward),
+     xlab = "Number of Clusters", ylab = "Connectivity", main = "Connectivity")
+lines(num_clusters, connectivity_average, type = "o", col = "blue")
+lines(num_clusters, connectivity_single, type = "o", col = "green")
+lines(num_clusters, connectivity_ward, type = "o", col = "purple")
+legend("bottomright", legend = c("Complete", "Average", "Single", "Ward"), col = c("red", "blue", "green", "purple"), lty = 1, pch = 1)
+
+# Plot Silhouette
+plot(num_clusters, silhouette_complete, type = "o", col = "red", ylim = range(silhouette_complete, silhouette_average, silhouette_single, silhouette_ward),
+     xlab = "Number of Clusters", ylab = "Silhouette Width", main = "Silhouette Width")
+lines(num_clusters, silhouette_average, type = "o", col = "blue")
+lines(num_clusters, silhouette_single, type = "o", col = "green")
+lines(num_clusters, silhouette_ward, type = "o", col = "purple")
+legend("bottomright", legend = c("Complete", "Average", "Single", "Ward"), col = c("red", "blue", "green", "purple"), lty1, pch = 1)
+```
+TODO: interpretation
 
 
 ## 5.2 Stability Validation
 ```{r}
-stab_mtcars <- clValid(mtcars, 2:6, clMethods = c("hierarchical", "kmeans", "pam"), validation = "stability")
+stab_mtcars <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "stability")
 
 optimal_scores_stab_mtcars <- optimalScores(stab_mtcars)
 optimal_scores_stab_mtcars
@@ -545,17 +680,71 @@ optimal_scores_stab_mtcars
 
 
 ```{r}
-par(mfrow = c(2, 2), mar = c(4, 4, 3, 1))
+stab_complete <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "stability", method = "complete", metric = "manhattan")
+stab_average <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "stability", method = "average", metric = "manhattan")
+stab_single <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "stability", method = "single", metric = "manhattan")
+stab_ward <- clValid(mtcars, 2:6, clMethods = "hierarchical", validation = "stability", method = "ward", metric = "manhattan")
 
-plot(stab_mtcars, measure = c("APN", "AD", "ADM", "FOM"), legend = F)
+apn_complete <- measures(stab_complete, "APN")[, , 1]
+apn_average <- measures(stab_average, "APN")[, , 1]
+apn_single <- measures(stab_single, "APN")[, , 1]
+apn_ward <- measures(stab_ward, "APN")[, , 1]
 
-plot(nClusters(stab_mtcars), measures(stab_mtcars, "APN")[, , 1], type = "n", axes = F, xlab = "", ylab = "")
-legend("center", clusterMethods(stab_mtcars), col = 1:9, lty = 1:9, pch = paste(1:9))
+ad_complete <- measures(stab_complete, "AD")[, , 1]
+ad_average <- measures(stab_average, "AD")[, , 1]
+ad_single <- measures(stab_single, "AD")[, , 1]
+ad_ward <- measures(stab_ward, "AD")[, , 1]
+
+adm_complete <- measures(stab_complete, "ADM")[, , 1]
+adm_average <- measures(stab_average, "ADM")[, , 1]
+adm_single <- measures(stab_single, "ADM")[, , 1]
+adm_ward <- measures(stab_ward, "ADM")[, , 1]
+
+fom_complete <- measures(stab_complete, "FOM")[, , 1]
+fom_average <- measures(stab_average, "FOM")[, , 1]
+fom_single <- measures(stab_single, "FOM")[, , 1]
+fom_ward <- measures(stab_ward, "FOM")[, , 1]
+
+# Plot APN
+par(mfrow = c(4, 1), mar = c(4, 4, 3, 1))
+plot(num_clusters, apn_complete, type = "o", col = "red", ylim = range(apn_complete, apn_average, apn_single, apn_ward),
+     xlab = "Number of Clusters", ylab = "APN", main = "Average Proportion of Non-Overlap (APN)")
+lines(num_clusters, apn_average, type = "o", col = "blue")
+lines(num_clusters, apn_single, type = "o", col = "green")
+lines(num_clusters, apn_ward, type = "o", col = "purple")
+legend("topright", legend = c("Complete", "Average", "Single", "Ward"), col = c("red", "blue", "green", "purple"), lty = 1, pch = 1)
+
+# Plot AD
+plot(num_clusters, ad_complete, type = "o", col = "red", ylim = range(ad_complete, ad_average, ad_single, ad_ward),
+     xlab = "Number of Clusters", ylab = "AD", main = "Average Distance (AD)")
+lines(num_clusters, ad_average, type = "o", col = "blue")
+lines(num_clusters, ad_single, type = "o", col = "green")
+lines(num_clusters, ad_ward, type = "o", col = "purple")
+legend("topright", legend = c("Complete", "Average", "Single", "Ward"), col = c("red", "blue", "green", "purple"), lty = 1, pch = 1)
+
+# Plot ADM
+plot(num_clusters, adm_complete, type = "o", col = "red", ylim = range(adm_complete, adm_average, adm_single, adm_ward),
+     xlab = "Number of Clusters", ylab = "ADM", main = "Average Distance between Means (ADM)")
+lines(num_clusters, adm_average, type = "o", col = "blue")
+lines(num_clusters, adm_single, type = "o", col = "green")
+lines(num_clusters, adm_ward, type = "o", col = "purple")
+legend("topright", legend = c("Complete", "Average", "Single", "Ward"), col = c("red", "blue", "green", "purple"), lty = 1, pch = 1)
+
+# Plot FOM
+plot(num_clusters, fom_complete, type = "o", col = "red", ylim = range(fom_complete, fom_average, fom_single, fom_ward),
+     xlab = "Number of Clusters", ylab = "FOM", main = "Figure of Merit (FOM)")
+lines(num_clusters, fom_average, type = "o", col = "blue")
+lines(num_clusters, fom_single, type = "o", col = "green")
+lines(num_clusters, fom_ward, type = "o", col = "purple")
+legend("topright", legend = c("Complete", "Average", "Single", "Ward"), col = c("red", "blue", "green", "purple"), lty = 1, pch = 1)
 ```
 * APN: The highest value is k-means at k=3.
 * AD: It seems like all 3 (hierarchical, PAM, and k-means) are lowest at the same point k=6. PAM is slightly lower than the other 2 methods overall.
 * ADM: The highest value is k-means at k-3, similar to APN.
 * FOM: Hierarchical and k-means methods are the lowest at k=6. K-means seems to have lower values overall though, so it may be better.
 
+TODO: interpretation
+
 
 # 6. Conclusion and Recommendation
+TODO: conclusion
